# NjordScan

./: .dockerignore  .gitignore  .njordscan.yml  .pre-commit-hooks.yaml  BEGINNER_GUIDE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_BUILD_NOTES.md  Dockerfile  HANDOFF.md  KALI_LINUX_GUIDE.md  LICENSE  MANIFEST.in  QUICK_INSTALL.md  README.md  SECURITY.md  WHEEL_INSTALLATION_GUIDE.md  action.yml  docker-compose.yml  fix-lxml-kali.sh  install-kali.sh  install.bat  install.py  install.sh  pyproject.toml  pytest.ini  requirements-basic.txt  requirements-core.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.py  setup.py  test-report.html  test-report.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  false_positive.yml  feature_request.yml
.github/workflows/: ci.yml  lab-ci.yml  release.yml
docker/: monitor.compose.yml
docs/: README.md  RULES.md  V1-vs-V2.md  ai-assistant-mcp.md  ai-features.md  ai-npm-detection.md  ci-cd.md  configuration.md  dynamic-scanning.md  getting-started.md  troubleshooting.md
docs/advanced/: KALI_LINUX_FIXES.md  LXML_TROUBLESHOOTING.md  troubleshooting.md
docs/development/: api.md  architecture.md
docs/docker/: README.md
docs/getting-started/: KALI_USER_QUICK_FIX.md  ai-npm-detection-quick-start.md  installation.md  quick-start.md
docs/security/: framework-pentesting.md  vulnerability-types.md
docs/user-guide/: cli-reference.md
examples/: README.md
examples/vulnerable-shop/: .env.local  middleware.ts  next.config.js  package-lock.json  package.json
njordscan/: __init__.py  __main__.py  _webguard.py  cache.py  cli.py  config.py  data_updater.py  legal.py  main.py  mcp_server.py  plugin_creator.py  plugins.py  sbom.py  scanner.py  scanner_enhanced.py  update.py  utils.py  vulnerability.py  vulnerability_types.py
njordscan/ai/: __init__.py  ai_code_fingerprinting.py  ai_orchestrator.py  ai_package_analyzer.py  code_understanding.py  maintainer_profile_analyzer.py  package_similarity_analyzer.py  security_advisor.py
njordscan/analysis/: __init__.py  ai_redteam.py  ast_analyzer.py  attack_paths.py  dep_graph.py  keystone.py  llm_analyzer.py  pattern_engine.py  taint_tracker.py
njordscan/analytics/: trend_analyzer.py
njordscan/community/: __init__.py  community_hub.py  community_orchestrator.py
njordscan/configuration/: __init__.py  config_analyzer.py  config_orchestrator.py  secrets_detector.py
njordscan/core/: __init__.py  baseline.py  circuit_breaker.py  config.py  configfile.py  exploit.py  finding.py  gitblame.py  gitdiff.py  history.py  orchestrator.py  paths.py  performance_monitor.py  project.py  rate_limiter.py  reachability.py  retry_handler.py  scan_orchestrator_enhanced.py  severity.py  surface.py  usage.py
njordscan/data/: attack_map.yaml  default_rules.yaml  framework_configs.yaml  js_cve_db.json  rules.yaml
njordscan/dependencies/: __init__.py  dependency_analyzer.py  dependency_orchestrator.py  sbom_generator.py
njordscan/detectors/: __init__.py  ai_agency.py  base.py  configs.py  dependencies.py  git_hygiene.py  pattern_engine.py  runtime.py  secrets.py  static_analysis.py  supply_chain.py  taint.py  urlheuristics.py
njordscan/developer_experience/: __init__.py  dev_tools.py  dx_orchestrator.py  ide_integration.py  interactive_cli.py
njordscan/explain/: __init__.py  engine.py  providers.py  redact.py
njordscan/fix/: __init__.py  ai_fix.py
njordscan/frameworks/: __init__.py  base_framework_analyzer.py  framework_detector.py  nextjs_analyzer.py  react_analyzer.py  vite_analyzer.py
njordscan/gui/: __init__.py  index.html  server.py
njordscan/integrations/: __init__.py  ci_orchestrator.py  github_integration.py  quality_gates.py
njordscan/intelligence/: __init__.py  behavioral_analyzer.py  correlation_engine.py  false_positive_filter.py  intelligence_engine.py  intelligence_orchestrator.py  risk_calculator.py  rules_engine.py  threat_intelligence.py  vulnerability_classifier.py  vulnerability_prioritizer.py
njordscan/knowledge/: __init__.py  attack.py  loader.py  rules.py
njordscan/modules/: __init__.py  ai_endpoints.py  base.py  code_static.py  code_static_enhanced.py  configs.py  dependencies.py  headers.py  runtime.py  supply_chain.py  vulnerability_detector.py
njordscan/monitor/: __init__.py  index.html  scanner.py  server.py  store.py
njordscan/performance/: __init__.py  cache_manager.py  parallel_coordinator.py  performance_optimizer.py  performance_orchestrator.py  resource_manager.py
njordscan/plugins_v2/: __init__.py  plugin_manager.py  plugin_marketplace.py  plugin_orchestrator.py
njordscan/report/: __init__.py  attack_navigator.py  formatter.py  html.py  json_report.py  sarif.py  terminal.py
njordscan/reporting/: __init__.py  report_generator.py  reporting_orchestrator.py  visualization_engine.py
njordscan/tests/: test_cli.py  (+1 more)
plugins/: __init__.py
reports/: njordscan_report_scan_20250905_071645.md
scripts/: docker-build.sh  gen_docs.py  gen_rules_feed.py  gen_showcase.py  lab-secrets.py
simulation-lab/: Makefile  README.md  SHOWCASE.md  docker-compose.yml  run-lab.sh  start.sh
tests/: conftest.py  example_vulnerability_usage.py  test_ai_agency.py  test_ai_detection_integration.py  test_ai_detection_performance.py  test_ai_fix.py  test_ai_integration.py  test_ai_intelligence.py  test_ai_npm_detection.py  test_ai_redteam.py  test_attack_paths.py  test_behavioral_analysis.py  test_circuit_breaker.py  test_cli.py  test_complete_system_validation.py  test_core.py  test_core_functionality.py  test_core_infra.py  test_cross_file.py  test_cve_mitre_update.py  test_dep_graph.py  test_detectors.py  test_dev_only_surface.py  test_diff.py  test_enhanced_behavioral_analysis.py  test_features.py  test_fp_regressions.py  test_git_hygiene.py  test_gui.py  test_intel.py  test_keystone.py  test_llm_analyzer.py  test_mcp.py  test_monitor.py  test_orchestrator_robustness.py  test_pattern_engine.py  test_pattern_library.py  test_rate_limiter.py  test_reachability.py  test_redact.py  (+14 more)
(+373 files in other folders)
