[build-system]
requires = [
    "setuptools>=61.0",
    "wheel>=0.37.0",
    "setuptools-scm>=8.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "njordscan"
version = "1.0.0"
description = "The Ultimate Security Scanner for Next.js, React, and Vite Applications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NjordScan Team", email = "team@njordscan.dev"}
]
maintainers = [
    {name = "NjordScan Team", email = "team@njordscan.dev"}
]
keywords = [
    "security",
    "scanner",
    "vulnerability",
    "nextjs",
    "react",
    "vite",
    "javascript",
    "typescript",
    "owasp",
    "cve",
    "penetration-testing"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: System :: Systems Administration"
]
requires-python = ">=3.8"
dependencies = [
    # Core CLI and Terminal UI
    "click>=8.0.0,<9.0.0",
    "rich>=13.0.0,<15.0.0",
    "colorama>=0.4.4,<1.0.0",
    
    # HTTP and Networking
    "aiohttp>=3.8.0,<4.0.0",
    "requests>=2.28.0,<3.0.0",
    "httpx>=0.24.0,<1.0.0",
    
    # Configuration and Data Parsing
    "pyyaml>=6.0,<7.0.0",
    "toml>=0.10.2,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    
    # Web Scraping and HTML Processing
    "beautifulsoup4>=4.11.0,<5.0.0",
    "lxml>=4.9.0,<5.0.0",
    
    # Template Engine and Reporting
    "jinja2>=3.1.0,<4.0.0",
    "markdown>=3.4.0,<4.0.0",
    
    # Security and Cryptography
    "cryptography>=40.0.0,<42.0.0",
    "pyjwt>=2.7.0,<3.0.0",
    
    # Concurrency and Performance
    "aiofiles>=23.0.0,<24.0.0",
    "asyncio-throttle>=1.0.2,<2.0.0",
    
    # Type Hints and Validation
    "typing-extensions>=4.5.0,<5.0.0",
    "pydantic>=2.0.0,<3.0.0",
    
    # Security Scanning
    "safety>=3.0.0,<4.0.0",
    "packaging>=23.0,<24.0",
    
    # Utilities
    "tqdm>=4.65.0,<5.0.0",
    "tabulate>=0.9.0,<1.0.0",
    "psutil>=5.9.0,<6.0.0",
    "watchdog>=3.0.0,<4.0.0",
    
    # Plugin System
    "importlib-metadata>=6.8.0,<7.0.0",
    "stevedore>=5.1.0,<6.0.0",
    "pluggy>=1.2.0,<2.0.0",
    
    # Database and Caching (Basic)
    "diskcache>=5.6.0,<6.0.0",
    
    # Network Security
    "dnspython>=2.4.0,<3.0.0",
    
    # Compression
    "lz4>=4.3.0,<5.0.0",
    
    # Additional Security Tools
    "bandit>=1.7.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0"
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0"
]

[project.urls]
Homepage = "https://github.com/nimdy/njordscan"
Documentation = "https://github.com/nimdy/njordscan#readme"
Repository = "https://github.com/nimdy/njordscan.git"
"Bug Tracker" = "https://github.com/nimdy/njordscan/issues"
Changelog = "https://github.com/nimdy/njordscan/blob/main/CHANGELOG.md"

[project.scripts]
njordscan = "njordscan.cli:main"

[tool.setuptools]
packages = ["njordscan"]

[tool.setuptools.package-data]
njordscan = [
    "data/*.yaml",
    "data/*.json", 
    "data/*.txt",
    "templates/*.j2",
    "templates/*.html",
    "static/css/*.css",
    "static/js/*.js",
    "static/images/*"
]

[tool.setuptools-scm]
write_to = "njordscan/_version.py"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]